<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

  <FrameLayout
      android:id="@+id/customPanel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <LinearLayout
      android:id="@+id/topPanel"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <RelativeLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        >

      <ImageView
          android:id="@+id/icon"
          android:layout_width="32dp"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_margin="8dip"
          android:scaleType="centerInside"
          android:src="@null"
          />

      <TextView
          android:id="@+id/alertTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_marginLeft="8dp"
          android:layout_marginStart="8dp"
          android:ellipsize="end"
          android:gravity="center"
          android:singleLine="true"
          />
    </RelativeLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/otp_verification"
        android:textSize="16sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <LinearLayout
          android:id="@+id/llOTP"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center_horizontal"
          />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        >
      <Button
          android:id="@+id/button2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:layout_weight="1"
          android:text="@string/cancel"
          android:visibility="gone"
          style="?android:attr/buttonBarButtonStyle"
          />

      <Button
          android:id="@+id/button1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          android:layout_weight="1"
          android:text="@string/ok"
          android:visibility="gone"
          style="?android:attr/buttonBarButtonStyle"
          />

    </LinearLayout>
  </LinearLayout>
</LinearLayout>